# platform.core.api.application

./: CMakeLists.txt  capi-appfw-application.pc.in  capi-appfw-module.pc.in  project.config
alarm/: CMakeLists.txt  alarm.c
app_common/: CMakeLists.txt  app_error.c  app_event.c  app_finalizer.c  app_package.c  app_path.c
app_control/: CMakeLists.txt  app_control.c
debian/: changelog  control  rules
doc/: appfw_alarm_doc.h  appfw_app_common_doc.h  appfw_app_control_doc.h  appfw_app_doc.h  appfw_event_doc.h  appfw_i18n_doc.h  appfw_preference_doc.h  appfw_resource_manager_doc.h
event/: CMakeLists.txt  event.c
include/: app.h  app_alarm.h  app_common.h  app_control.h  app_control_internal.h  app_event.h  app_extension.h  app_i18n.h  app_internal.h  app_preference.h  app_preference_internal.h  app_preference_log.h  app_preference_private.h  app_private.h  app_resource_manager.h  app_service.h  app_service_private.h  app_storage.h  app_storage_private.h  app_types.h  app_ui_notification.h
packaging/: capi-appfw-application.spec
preference/: CMakeLists.txt  preference.c  preference_db.c  preference_inoti.c
src/: alarm.c  app_control.c  app_device.c  app_error.c  app_event.c  app_finalizer.c  app_main.c  app_package.c  app_path.c  app_resource.c  app_resource_manager.c  i18n.c  preference.c  service.c  storage.c  storage_internal.c  storage_sdcard.c  storage_usbhost.c  ui_notification.c
